# crabbyqlite

./: Cargo.toml  README.md  build.rs  cspell.json  dist-workspace.toml
.github/: build-setup.yml
.github/workflows/: release.yml
locales/: en.yml
src/: keybindings.rs  logging.rs  main.rs
src/database/: mod.rs  sqlite.rs
src/database/sqlite/: mod.rs  pragma.rs
src/lsp/: mod.rs  sqlite.rs
src/state/: async_resource.rs  database.rs  database_tables.rs  mod.rs
src/state/database/: connection.rs  mod.rs  tables.rs
src/ui/: app.rs  assets.rs  gpui_tokio.rs  icons.rs  menus.rs  mod.rs  sql_editor.rs  titlebar.rs  translated.rs  welcome.rs
src/ui/actions/: close_database.rs  copy_text.rs  mod.rs  new_database.rs  new_memory_database.rs  open_encrypted_database.rs  open_file.rs  quit.rs
src/ui/components/atoms/: icons.rs  mod.rs
src/ui/components/atoms/i18n/: mod.rs
src/ui/components/molecules/: database_status_label.rs  mod.rs
src/ui/components/molecules/welcome/: mod.rs  welcome_button.rs
src/ui/components/organisms/: mod.rs  pagination.rs  sql_editor.rs  titlebar.rs
src/ui/components/organisms/database/: mod.rs
src/ui/components/organisms/database/table_browser/: mod.rs  table.rs
src/ui/components/organisms/database/tables_browser/: mod.rs  tables_table_tree.rs
src/ui/database/: database_browse_data_view.rs  database_sql_editor.rs  database_sql_executor.rs  database_status_label.rs  database_table_browser.rs  database_tables_view.rs  mod.rs
src/ui/database/browse/: mod.rs  table_browser.rs  toolbar.rs
src/ui/database/executor/: mod.rs
src/ui/database/tables/: mod.rs  tree.rs
src/ui/sql/: mod.rs
src/ui/views/: mod.rs  welcome.rs
src/ui/views/database/: browse_table.rs  browse_tables.rs  edit_pragmas.rs  mod.rs  query_executor.rs
src/ui/welcome/: mod.rs
src/utils/: async_utils.rs  defer.rs  gpui_tokio.rs  mod.rs
wix/: main.wxs
