[package]
name = "crabbyqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
directories = "6.0.0"
# gpui = "0.2.2"

gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
  "font-kit",
  "x11",
  "wayland",
  "runtime_shaders",
] }
gpui-component = { version = "0.5.1", git = "https://github.com/longbridge/gpui-component.git", rev = "564f9fa83145ac8439989242e203471ac86dad11" }
gpui-component-assets = { version = "0.5.1", git = "https://github.com/longbridge/gpui-component.git", rev = "564f9fa83145ac8439989242e203471ac86dad11" }

lsp-types = "0.97.0"
rust-embed = "8.11.0"
rust-i18n = "3.1.5"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tree-sitter = "0.25.10"
tree-sitter-sequel = "0.3.11"
sqlformat = "0.5.0"
schemars = { version = "1.0", features = ["indexmap2"] }
serde = "1.0.228"

# Database (With SLQCipher)
sqlx = { version = "=0.8.6", features = ["sqlite", "runtime-tokio", "chrono"] }
libsqlite3-sys = { version = "=0.30.1", features = ["bundled-sqlcipher-vendored-openssl"] }


[dev-dependencies]
gpui-component = { version = "0.5.1", features = [
  "inspector",
], git = "https://github.com/longbridge/gpui-component.git", rev = "564f9fa83145ac8439989242e203471ac86dad11" }


# Pin GPUI to a specific revision
[patch."https://github.com/zed-industries/zed"]
gpui = { git = "https://github.com/jacobtread/zed", rev = "ec9be5c332f79986b046a2985e003766591ec82f" }
gpui_platform = { git = "https://github.com/jacobtread/zed", rev = "ec9be5c332f79986b046a2985e003766591ec82f" }
