[package]
name = "crabbyqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
directories = "6.0.0"
# gpui = "0.2.2"

gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
  "font-kit",
  "x11",
  "wayland",
  "runtime_shaders",
] }
gpui-component = { version = "0.5.1", git = "https://github.com/longbridge/gpui-component.git", rev = "196b9259b562c26be97c92f88c798bbeefa9cb3d" }
gpui-component-assets = { version = "0.5.1", git = "https://github.com/longbridge/gpui-component.git", rev = "196b9259b562c26be97c92f88c798bbeefa9cb3d" }

lsp-types = "0.97.0"
rust-embed = "8.11.0"
rust-i18n = "3.1.5"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tree-sitter = "0.26.8"
tree-sitter-sequel = "0.3.11"
sqlformat = "0.5.0"
schemars = { version = "1.0", features = ["indexmap2"] }
serde = "1.0.228"

# Database (With SLQCipher)
tokio-rusqlite = { version = "0.7.0", features = ["bundled-sqlcipher-vendored-openssl"] }
itertools = "0.14.0"


[dev-dependencies]
gpui-component = { version = "0.5.1", features = [
  "inspector",
], git = "https://github.com/longbridge/gpui-component.git", rev = "196b9259b562c26be97c92f88c798bbeefa9cb3d" }


# Pin GPUI to a specific revision
[patch."https://github.com/zed-industries/zed"]
gpui = { git = "https://github.com/jacobtread/zed", rev = "14befe215158182be6b505b26bccf25538831213" }
gpui_platform = { git = "https://github.com/jacobtread/zed", rev = "14befe215158182be6b505b26bccf25538831213" }
